--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ performer et surtout passer d’excellents moments ensemble.
 
         <textarea name="motivation" rows="5" placeholder="Pourquoi rejoindre Zénith King ?" required></textarea>
         
-        <button type="submit">Envoyer ma candidature</button>
+        <button class="btn" type="submit">Envoyer ma candidature</button>
     </form>
 </section>
 
@@ -336,5 +336,6 @@ performer et surtout passer d’excellents moments ensemble.
 
 </body>
 </html>
+
 
 
