Update index.html captcha
Signed-off-by: zenithking60 <w5hdbrx64p@privaterelay.appleid.com>

--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@ performer et surtout passer d’excellents moments ensemble.
 <section id="recrutement">
     <h2>Rejoindre l'élite</h2>
     <form action="https://api.web3forms.com/submit" method="POST" class="gaming-form">
+        <div class="h-captcha" data-captcha="true"></div>
         <input type="hidden" name="access_key" value="36081463-ddd5-4ec0-9050-cf01fff9b42e">
         
         <div class="form-group">
@@ -333,9 +334,10 @@ performer et surtout passer d’excellents moments ensemble.
 <footer>
 © Zénith King — Team Esport | Tous droits réservés
 </footer>
-
+<script src="https://web3forms.com/client/script.js" async defer></script>
 </body>
 </html>
+
 
 
 
