--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@ performer et surtout passer d’excellents moments ensemble.
 <div class="team">
 <div class="player">
 <h3>Fondateur</h3>
+    <h1>zK_Nappa-</h1>
 <p>Manager / Leader</p>
 </div>
 <div class="player">
@@ -339,6 +340,7 @@ performer et surtout passer d’excellents moments ensemble.
 <script src="https://web3forms.com/client/script.js" async defer></script>
 </body>
 </html>
+
 
 
 
